--- a/.github/workflows/docker_image_builder.yml
+++ b/.github/workflows/docker_image_builder.yml
@@ -15,171 +15,180 @@ on:
   workflow_dispatch:
 
 env:
-  AWS_REGION : "us-east-1"
-  PROJECT_FILES_GIT : "strc-project-properties.git"
+  AWS_REGION: "us-east-1"
+  PROJECT_FILES_GIT: "hh-project-properties.git"
   PROJECT_FILES_NAME: "project.properties"
   PROJECT_FILES_DIRECTORY: "project_file"
   IMAGE_REGISTRY: "ghcr.io"
   IMAGE_REGISTRY_USERNAME: ${{github.actor}}
   IMAGE_REGISTRY_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
 
 permissions:
-      id-token: write
-      contents: read    # This is required for actions/checkout@v1
-      packages: write
+  id-token: write
+  contents: read # This is required for actions/checkout@v1
+  packages: write
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:  
+jobs:
   build-docker-image:
     runs-on: ubuntu-latest
-      
+
     #needs: FindAWSAccount
     steps:
-        # Get current time stamp to use as reference elsewhere
-        - name: Get current date
-          id: date
-          run: echo "::set-output name=date::$(date +'%Y%m%dT%H%M%S')"
-        
-        # Read commit message and determine if to skip docker work
-        - name: Read if to skip image build & deployment based on commit message
-          id: skip_dk_build
-          if: "contains(github.event.head_commit.message, '+image-skip')"
-          run: |
-            echo "We will node installation"
-            echo "::set-output name=bypass_dk_build::true"
-        
-        - name: Check if input is null for repo name
-          if: ${{inputs.repo_name}}
-          id: repo_name_passed
-          run: |
-            if [ ${{inputs.repo_name}} != "" ]; then
-              echo ::set-output name=reponamepassed::true
-            else
-              echo ::set-output name=reponamepassed::false
-            fi
+      # Get current time stamp to use as reference elsewhere
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y%m%dT%H%M%S')"
 
-        #- name: Login to docker
-        #  if: |
-        #    ${{ steps.skip_everything.outputs.skip_everything1 != 'true' && steps.skip_dk_build.outputs.bypass_dk_build !='true' && steps.get_cdk_destroy_stack.outputs.cdk_destroy_stack != 'true'}}
-        #  uses: docker/login-action@v1
-        #  with:
-        #    registry: ${{env.IMAGE_REGISTRY}}
-        #    username: ${{env.IMAGE_REGISTRY_USERNAME}}
-        #    password: ${{env.IMAGE_REGISTRY_TOKEN}}
-        
-        # Clone repositories prior to work
-        - name: Git clone the repository
-          uses: actions/checkout@v2
+      # Read commit message and determine if to skip docker work
+      - name: Read if to skip image build & deployment based on commit message
+        id: skip_dk_build
+        if: "contains(github.event.head_commit.message, '+image-skip')"
+        run: |
+          echo "We will node installation"
+          echo "::set-output name=bypass_dk_build::true"
 
-        - name: Make project files directory
-          run: mkdir ${{env.PROJECT_FILES_DIRECTORY}}
-        
-        - name: Project files clone
-          uses: actions/checkout@v2
-          with:
-            token: ${{ secrets.envPAT }}
-            repository: simple-business-apps/strc-project-properties
-            ref: main
-            path: ${{env.PROJECT_FILES_DIRECTORY}}
-        
-        # Grant permissions to all files in directory
-        - name: Grant permissions to all files
-          run: chmod -R 755 ./  
-        
-        
-        # Read of project files and set to variables
-        - name: Get project constants from project.properties repo - Branch name, deployment role, skip cdk, destroy stack
-          id: project_constants
-          run: |
-            account_id="`grep aws-strc-development ${{env.PROJECT_FILES_NAME}}|cut -d'=' -f2`"
-            echo "::set-output name=env_id::${account_id}"
-            echo "AWS_ENVRIONMENT=${account_id}" >> $GITHUB_ENV
+      - name: Check if input is null for repo name
+        if: ${{inputs.repo_name}}
+        id: repo_name_passed
+        run: |
+          if [ ${{inputs.repo_name}} != "" ]; then
+            echo ::set-output name=reponamepassed::true
+          else
+            echo ::set-output name=reponamepassed::false
+          fi
 
-          working-directory: ${{env.PROJECT_FILES_DIRECTORY}}
+      # Get branch name to use for look up
+      - name: Branch if Dev
+        if: contains( github.ref, 'dev' )
+        run: |
+          echo "BRANCH_NAME=dev" >> $GITHUB_ENV
 
+      - name: Branch if Integration
+        if: contains( github.ref, 'integration' )
+        run: |
+          echo "BRANCH_NAME=integration" >> $GITHUB_ENV
 
-        # Role that will be used for OIDC. This is the role this session will assume when connecting to AWS         
-        - name: Arn to use
-          id: aws_assume_role
-          run: |
-            echo "::set-output name=role_arn1::arn:aws:iam::${{ steps.project_constants.outputs.env_id }}:role/strc-github-oidc-access-role"
+      - name: Branch if Production
+        if: ( contains( github.ref, 'production' )
+        run: |
+          echo "BRANCH_NAME=production" >> $GITHUB_ENV
 
-        - name: Configure AWS credentials
-          id: aws_oidc_credentials
-          uses: aws-actions/configure-aws-credentials@master
-          with:
-            role-to-assume: ${{steps.aws_assume_role.outputs.role_arn1}}
-            role-session-name: ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}
-            aws-region: ${{ env.AWS_REGION }}
-    
-        - name: Version number
-          #if: github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, '+tag-skip') != true
-          run: |
-            echo "${{ steps.date.outputs.date }} is the new version"
-            echo "TAG_VERSION=${{ steps.date.outputs.date }}" >> $GITHUB_ENV
-        
-        
-        # Node installation (if required)
-        - name: Setup node.js environment
-          uses: actions/setup-node@v2.1.2
+      - name: Branch if BETA
+        if: contains( github.ref, 'beta' )
+        run: |
+          echo "BRANCH_NAME=beta" >> $GITHUB_ENV
 
-        - name: Install yaml
-          if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
-          run: |
-            pip install pyyaml
-        
-        - name: Remove existing project if commited, replace with master version
-          run: |
-            ls
-            echo "Moving file to current directory.."
-            rm -f -- ${{env.PROJECT_FILES_NAME}}
-            cp ${{env.PROJECT_FILES_DIRECTORY}}/${{env.PROJECT_FILES_NAME}} .
-            echo "done moving file to current directory.."
-            ls
-        - name: Image Repository name
-          run: |
-            echo "IMAGE_REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
-        
-        - name: ECR Registry
-          run: |            
-            echo DOCKER_TAG_VERSION="${{ steps.project_constants.outputs.env_id }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${IMAGE_REPO_NAME}:${TAG_VERSION}" >> $GITHUB_ENV
-            echo DOCKER_TAG_LATEST="${{ steps.project_constants.outputs.env_id }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${IMAGE_REPO_NAME}:latest" >> $GITHUB_ENV
-            
-        
-        - name: ECR Registry name
-          run: echo ${DOCKER_TAG_VERSION} is the docker version
-            
-        - name: Build Docker images
-          if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
-          id: build_images
-          run: |
-            docker build -t $DOCKER_TAG_VERSION .
-            docker tag $DOCKER_TAG_VERSION $DOCKER_TAG_LATEST
+      - name: Branch if Tools
+        if: contains( github.ref, 'tools' )
+        run: |
+          echo "BRANCH_NAME=tools" >> $GITHUB_ENV
 
-        - name: ECR Login
-          if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
-          id: ecr_login
-          run: |
-            (aws ecr describe-repositories --repository-names ${IMAGE_REPO_NAME} && echo "::set-output name=repo_created::false" ) || ( aws ecr create-repository --repository-name ${IMAGE_REPO_NAME} && echo "::set-output name=repo_created::true" )
-            aws ecr get-login-password --region ${{ env.AWS_REGION }}| docker login --username AWS --password-stdin ${AWS_ENVRIONMENT}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+      - name: Echo branch
+        run: echo "${BRANCH_NAME} is the branch name to use in lookup"
 
-        - name: created repo
-          if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
-          run: |
-            echo "${{ steps.ecr_login.outputs.repo_created }} did we create repo"
+      # Clone repositories prior to work
+      - name: Git clone the repository
+        uses: actions/checkout@v2
 
-        - name: Push docker image to ECR
-          if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
-          run: |
-            docker push $DOCKER_TAG_VERSION
-            docker push $DOCKER_TAG_LATEST
-        
-        - name: Lambda function name
-          run: |
-            echo LAMBDA_FUNCTION_NAME="${{inputs.lambd_function_name}}" >> $GITHUB_ENV
-        
-        - name: Update function with new image built
-          if: ${{ steps.repo_name_passed.outputsreponamepassed !='true' && steps.get_cdk_destroy_stack.outputs.cdk_destroy_stack != 'true' && steps.ecr_login.outputs.repo_created =='false' && steps.skip_dk_build.outputs.bypass_dk_build !='true'}} 
-          run: |
-            (aws lambda update-function-code --region ${{ env.AWS_REGION }} --function-name $LAMBDA_FUNCTION_NAME --image-uri $DOCKER_TAG_VERSION ) || ( echo "Function not found" )
+      - name: Make project files directory
+        run: mkdir ${{env.PROJECT_FILES_DIRECTORY}}
+
+      - name: Project files clone
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.envPAT }}
+          repository: host-hive-app/hh-project-properties
+          ref: main
+          path: ${{env.PROJECT_FILES_DIRECTORY}}
+
+      # Grant permissions to all files in directory
+      - name: Grant permissions to all files
+        run: chmod -R 755 ./
+
+      # Read of project files and set to variables
+      - name: Get project constants from project.properties repo - Branch name, deployment role, skip cdk, destroy stack
+        id: project_constants
+        run: |
+          account_id="`grep aws_${BRANCH_NAME}_account ${{env.PROJECT_FILES_NAME}}|cut -d'=' -f2`"
+          echo "::set-output name=env_id::${account_id}"
+          echo "AWS_ENVRIONMENT=${account_id}" >> $GITHUB_ENV
+
+        working-directory: ${{env.PROJECT_FILES_DIRECTORY}}
+
+      - name: Configure AWS credentials
+        id: aws_oidc_credentials
+        uses: aws-actions/configure-aws-credentials@master
+        with:
+          role-to-assume: ${{steps.aws_assume_role.outputs.role_arn1}}
+          role-session-name: ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Version number
+        #if: github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, '+tag-skip') != true
+        run: |
+          echo "${{ steps.date.outputs.date }} is the new version"
+          echo "TAG_VERSION=${{ steps.date.outputs.date }}" >> $GITHUB_ENV
+
+      # Node installation (if required)
+      - name: Setup node.js environment
+        uses: actions/setup-node@v2.1.2
+
+      - name: Install yaml
+        if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
+        run: |
+          pip install pyyaml
+
+      - name: Remove existing project if commited, replace with master version
+        run: |
+          ls
+          echo "Moving file to current directory.."
+          rm -f -- ${{env.PROJECT_FILES_NAME}}
+          cp ${{env.PROJECT_FILES_DIRECTORY}}/${{env.PROJECT_FILES_NAME}} .
+          echo "done moving file to current directory.."
+          ls
+      - name: Image Repository name
+        run: |
+          echo "IMAGE_REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
+
+      - name: ECR Registry
+        run: |
+          echo DOCKER_TAG_VERSION="${{ steps.project_constants.outputs.env_id }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${IMAGE_REPO_NAME}:${TAG_VERSION}" >> $GITHUB_ENV
+          echo DOCKER_TAG_LATEST="${{ steps.project_constants.outputs.env_id }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${IMAGE_REPO_NAME}:latest" >> $GITHUB_ENV
+
+      - name: ECR Registry name
+        run: echo ${DOCKER_TAG_VERSION} is the docker version
+
+      - name: Build Docker images
+        if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
+        id: build_images
+        run: |
+          docker build -t $DOCKER_TAG_VERSION .
+          docker tag $DOCKER_TAG_VERSION $DOCKER_TAG_LATEST
+
+      - name: ECR Login
+        if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
+        id: ecr_login
+        run: |
+          (aws ecr describe-repositories --repository-names ${IMAGE_REPO_NAME} && echo "::set-output name=repo_created::false" ) || ( aws ecr create-repository --repository-name ${IMAGE_REPO_NAME} && echo "::set-output name=repo_created::true" )
+          aws ecr get-login-password --region ${{ env.AWS_REGION }}| docker login --username AWS --password-stdin ${AWS_ENVRIONMENT}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+
+      - name: created repo
+        if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
+        run: |
+          echo "${{ steps.ecr_login.outputs.repo_created }} did we create repo"
+
+      - name: Push docker image to ECR
+        if: ${{steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
+        run: |
+          docker push $DOCKER_TAG_VERSION
+          docker push $DOCKER_TAG_LATEST
+
+      - name: Lambda function name
+        run: |
+          echo LAMBDA_FUNCTION_NAME="${{inputs.lambd_function_name}}" >> $GITHUB_ENV
+
+      - name: Update function with new image built
+        if: ${{ steps.repo_name_passed.outputsreponamepassed !='true' && steps.get_cdk_destroy_stack.outputs.cdk_destroy_stack != 'true' && steps.ecr_login.outputs.repo_created =='false' && steps.skip_dk_build.outputs.bypass_dk_build !='true'}}
+        run: |
+          (aws lambda update-function-code --region ${{ env.AWS_REGION }} --function-name $LAMBDA_FUNCTION_NAME --image-uri $DOCKER_TAG_VERSION ) || ( echo "Function not found" )
